--- a/.github/workflows/main_touristguidemmmd.yml
+++ b/.github/workflows/main_touristguidemmmd.yml
@@ -4,6 +4,7 @@
 name: Build and deploy JAR app to Azure Web App - touristguidemmmd
 
 on:
+  pull_request: #Jeg har tilføjet denne
   push:
     branches:
       - main
@@ -30,6 +31,26 @@ jobs:
         with:
           name: java-app
           path: '${{ github.workspace }}/target/*.jar'
+
+  qodana: # Jeg har tilføjet denne
+    runs-on: ubuntu-latest
+    needs: build
+    permissions:
+      contents: write
+      pull-requests: write
+      checks: write
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}  # to check out the actual pull request commit, not the merge commit
+          fetch-depth: 0  # a full history is required for pull request analysis
+      - name: 'Qodana Scan'
+        uses: JetBrains/qodana-action@v2024.1
+        with:
+          pr-mode: false
+        env:
+          QODANA_TOKEN: ${{ secrets.QODANA_TOKEN_1258536885 }}
+          QODANA_ENDPOINT: 'https://qodana.cloud'
 
   deploy:
     runs-on: ubuntu-latest
