Tilføjet .env variabler til at tilgå localhost SQL database. Ændret POM. Tilføjet jdbc dependency. Tilføjet .properties filer til .env filer. Tilføjet testCRUDSQL.html for at teste om metoder virker.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=TouristGuideMMMD
 spring.profiles.active=dev
+
+server.error.whitelabel.enabled=false
+server.error.include-message=always
+server.error.include-stacktrace=on_param
