CRUD Integrationstest færdigt. Tilføjet lidt dokumentering til testkode i .properties.

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,5 +1,15 @@
 # application-test.properties
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+#########
+# Her peger vi på h2 test-database, der er en in-memory database, der udelukkende bliver brugt til testing.
+# så vi ikke behøver at teste op imod den egentlige database eller lave en helt ny database med henblik på testing.
+# De her values er på forhånd givet. username vil altid være sa med tomt password.
+#######
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;
+# jdbc:h2:mem:testdb peger på in-memory h2 testdatabase. mem betyder at databasen bliver lagret i RAM og ikke bliver lagret lokalt på diskhukommelsen.
+# DB_CLOSE_DELAY=-1 fortæller, at databasen skal forblive åben og forbundet frem til Java Virtual Machine er lukket.
+#########
+# DB_CLOSE_ON_EXIT=FALSE denne attribute ikke nødvendig.
+#############
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
