--- a/.github/workflows/main_touristguidemmmd.yml
+++ b/.github/workflows/main_touristguidemmmd.yml
@@ -24,6 +24,10 @@ jobs:
           distribution: 'microsoft'
 
       - name: Build with Maven
+        env:
+          PROD_DATABASE_URL: ${{secrets.PROD_DATABASE_URL}}
+          PROD_USERNAME: ${{secrets.PROD_USERNAME}}
+          PROD_PASSWORD: ${{secrets.PROD_PASSWORD}}
         run: mvn clean install
 
       - name: Upload artifact for deployment job
