MMH tilrettet i test

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=TouristGuideMMMD
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 server.error.whitelabel.enabled=false
 server.error.include-message=always
