--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=${DEV_DATABASE_URL}
-spring.datasource.username=${DEV_USERNAME}
-spring.datasource.password=${DEV_PASSWORD}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
