tilrettet workflow til at blive trigget ved push og pr til feature branch

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -3,9 +3,9 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "featureMMH2025" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "featureMMH2025" ]
 
 jobs:
   build:
