--- a/.github/workflows/main_touristguidemmmd.yml
+++ b/.github/workflows/main_touristguidemmmd.yml
@@ -1,13 +1,10 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy JAR app to Azure Web App - touristguidemmmd
 
 on:
-  pull_request: #Jeg har tilføjet denne
+  pull_request:
   push:
     branches:
-      - main
+      - featureMMH2025 #vil normalt være Main / Dev
   workflow_dispatch:
 
 jobs:
