--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=${PROD_DATABASE_URL}
-spring.datasource.username=${PROD_USERNAME}
-spring.datasource.password=${PROD_PASSWORD}
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASS}
